fix for last ATlistbox

--- a/atsynedit_ex/atsynedit_form_complete.lfm
+++ b/atsynedit_ex/atsynedit_form_complete.lfm
@@ -30,5 +30,6 @@ object FormATSynEditComplete: TFormATSynEditComplete
     ParentColor = False
     OnClick = ListClick
     OnDrawItem = ListDrawItem
+    OwnerDrawn = True
   end
 end
