--- a/app/demo_test_lexer/unit1.lfm
+++ b/app/demo_test_lexer/unit1.lfm
@@ -7,6 +7,7 @@ object Form1: TForm1
   Caption = 'Demo'
   ClientHeight = 331
   ClientWidth = 650
+  OnCreate = FormCreate
   LCLVersion = '1.9.0.0'
   object Memo1: TMemo
     Left = 8
