--- a/app/demo_test_lexer/unit1.lfm
+++ b/app/demo_test_lexer/unit1.lfm
@@ -3,11 +3,13 @@ object Form1: TForm1
   Height = 331
   Top = 190
   Width = 650
+  ActiveControl = btnLoadLexer
   BorderStyle = bsDialog
   Caption = 'Demo'
   ClientHeight = 331
   ClientWidth = 650
   OnCreate = FormCreate
+  Position = poScreenCenter
   LCLVersion = '1.9.0.0'
   object Memo1: TMemo
     Left = 8
@@ -19,13 +21,13 @@ object Form1: TForm1
     TabOrder = 0
     WordWrap = False
   end
-  object Button1: TButton
+  object btnLoadLexer: TButton
     Left = 488
     Height = 25
     Top = 8
     Width = 152
     Caption = 'Read test lexer'
-    OnClick = Button1Click
+    OnClick = btnLoadLexerClick
     TabOrder = 1
   end
 end
